--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack serve",
+    "benchmark": "node tests/benchmark.js",
     "worker:build": "webpack --config webpack.worker.js",
     "worker:watch": "webpack serve --config webpack.worker.js"
   },
@@ -32,6 +33,7 @@
     "@types/bn.js": "^5.1.5",
     "anchor-client-gen": "^0.28.1",
     "elm-reloader": "^1.0.0",
+    "puppeteer": "^21.10.0",
     "webpack-dev-server": "^4.1.0"
   }
 }
