--- a/package.json
+++ b/package.json
@@ -4,36 +4,40 @@
     "watch": "webpack serve",
     "benchmark": "node tests/benchmark.js",
     "worker:build": "webpack --config webpack.worker.js",
-    "worker:watch": "webpack serve --config webpack.worker.js"
+    "worker:watch": "webpack serve --config webpack.worker.js",
+    "codegen": "anchor-client-gen ./idl/pow.json ./src/codegen"
   },
   "dependencies": {
+    "@coral-xyz/borsh": "^0.29.0",
     "@fontsource-variable/montserrat": "^5.0.17",
     "@fontsource/bangers": "^5.0.18",
     "@fontsource/bowlby-one-sc": "^5.0.18",
     "@fontsource/ibm-plex-mono": "^5.0.8",
-    "@metaplex-foundation/mpl-token-auth-rules": "^3.0.1",
-    "@metaplex-foundation/mpl-token-metadata": "^3.1.2",
-    "@metaplex-foundation/mpl-toolbox": "^0.9.1",
-    "@metaplex-foundation/umi": "^0.8.10",
-    "@solana/keys": "^2.0.0-experimental.76ad167",
-    "@solana/web3.js": "^2.0.0-experimental.76ad167",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.0",
+    "@metaplex-foundation/mpl-toolbox": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/web3.js": "^1.90.0",
     "@solana/webcrypto-ed25519-polyfill": "^2.0.0-experimental.f025b33",
-    "css-loader": "^6.8.1",
+    "@types/bs58": "^4.0.4",
+    "bs58": "^4.0.1",
+    "css-loader": "^6.10.0",
     "elm": "^0.19.1-3",
     "elm-webpack-loader": "^8.0.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "solana-connect": "^0.1.10",
+    "solana-new": "npm:@solana/web3.js@^2.0.0-experimental.dd2096e",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
-    "webpack": "^5.39.1",
+    "webpack": "^5.90.1",
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.5",
     "anchor-client-gen": "^0.28.1",
     "elm-reloader": "^1.0.0",
-    "puppeteer": "^21.10.0",
+    "puppeteer": "^22.0.0",
     "webpack-dev-server": "^4.1.0"
   }
 }
